Bug 114731 - Firefox themes cannot be installed, it finds nothing
Summary: Firefox themes cannot be installed, it finds nothing
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.4.4.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Julien Nabet
URL:
Whiteboard: target:6.1.0 target:6.0.1 target:5.4.6
Keywords:
: 101842 114772 115143 115417 115617 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-12-28 12:57 UTC by Peter Rich
Modified: 2018-07-22 13:21 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Rich 2017-12-28 12:57:21 UTC
Description:
All attempts to install firefox themes fail.  This is not a generic problem - I have 6 machines running the 'same' setup - all are running Mint 18.3, Firefox 57.0.1 and LibreOffice 5.4.4.2.  5 of these machines have been updated to this setup AND all have retained the previously set themes within Libreoffice.  The sixth machine is a fresh install from the OS up - on this machine I cannot install the same firefox theme on Libreoffice 

Steps to Reproduce:
1.Attempt to add Firefox theme
2.
3.

Actual Results:  
No themes found

Expected Results:
Theme found and installed


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Tests in safe mode result in a crash if attempting to install a theme from the theme URL.  Attempt to find theme by search for name does not find any theme


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:57.0) Gecko/20100101 Firefox/57.0
Comment 1 Jean-Baptiste Faure 2018-01-06 17:47:39 UTC
I guess I reproduce the problem with LO 5.4.4 from Ubuntu PPA.
Steps to reproduce:
1/ menu Tools > Options > LibreOffice > Personalization
2/ check Own Theme -> you get a new dialog "Select Firefox Theme"

3/ paste the url of a theme in the text field, for exemple https://addons.mozilla.org/fr/firefox/addon/dark-fox-18066/
-> you get an error box saying it does not find this url. Clicking on the OK button does not close the error box and after a moment finally LO crashes.
If I paste the same url but with http instead of https, LO close immediately.

4/ restart LO and redo steps 1 and 2, then click one of the category buttons
-> LO answer "Searching, please wait..." and after a moment this message disappears without result. 

Same behavior with LO 6.0.0.1.0+ built at home under Ubuntu 16.04 x86-64.

It worked in a previous version, so regression.

Best regards. JBF
Comment 2 Vick 2018-01-10 01:32:13 UTC
The same problem as description below
Comment 3 Gabor Kelemen (Collabora) 2018-01-10 08:13:36 UTC
The crash was fixed in bug #114818, but then the problem is that we can no longer successfully download the themes.

I heard from some Mozillian friends that there were changes to the addons.mozilla.org site, so that may be the underlying problem.
Comment 4 Xisco Faulí 2018-01-17 13:10:45 UTC
> I heard from some Mozillian friends that there were changes to the
> addons.mozilla.org site, so that may be the underlying problem.

Removing regression keyword then
Comment 5 Xisco Faulí 2018-01-22 10:52:19 UTC
*** Bug 114772 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2018-01-22 11:05:39 UTC
*** Bug 115143 has been marked as a duplicate of this bug. ***
Comment 7 Martin Srebotnjak 2018-01-22 12:07:28 UTC
I do not know if this is relevant at all:
https://www.ghacks.net/2016/11/24/firefox-will-only-support-web-extensions-by-the-end-of-2017/
Comment 8 Martin Srebotnjak 2018-01-27 20:22:46 UTC
Will there be some warning for users in release notes or somewhere else, at the download site, that this is not working at all?
Comment 9 Martin Srebotnjak 2018-01-29 17:55:43 UTC
A colleague working in the development of Mozilla suggested the LO developers ask about the addons link changes here:
https://github.com/mozilla/addons-server/issues
So they can fix the LO code.
Comment 10 Julien Nabet 2018-02-03 14:31:55 UTC
Sorry I hadn't seen this one.
I submitted a patch for review for tdf#115417
The patch allows to retrieve the theme (I saw just one)

Should I
1) Change my patch so it references this one and then I put tdf#115417 as a dup
or
2) put this one as a dup of tdf#115417
?
Comment 11 Martin Srebotnjak 2018-02-03 18:12:44 UTC
This bug report has already many redirects, so I suggest you close your report and make this one as the main one.
Are you sure only escaping of characters in links is the problem? I have read that there were changes in the add-ons repository (how files, like themes are stored), so does this really solve this problem?
Comment 12 Julien Nabet 2018-02-03 18:36:03 UTC
*** Bug 115417 has been marked as a duplicate of this bug. ***
Comment 13 Julien Nabet 2018-02-03 18:42:55 UTC
(In reply to Martin Srebotnjak from comment #11)
> This bug report has already many redirects, so I suggest you close your
> report and make this one as the main one.
> Are you sure only escaping of characters in links is the problem? I have
> read that there were changes in the add-ons repository (how files, like
> themes are stored), so does this really solve this problem?

I updated the patch See https://gerrit.libreoffice.org/#/c/49179/
I can't tell if the patch is the right one, I only can say that it retrieves personas and I can't install them.

Jan: put you in cc, thought you might be interested in this one.
Comment 14 Commit Notification 2018-02-06 10:37:03 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e6bbc04d906ed308fc5ca769bad7b8b4676594e

tdf#114731: persona html can contain " instead of "

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Peter Rich 2018-02-06 10:43:26 UTC
Hi All,  I have just installed 6.0.0.3 and the same conditions appear to apply.  On the previous new install machine I am still unable to find any themes.  On the machines where themes were installed under earlier versions of LO the theme has carried through to LO6.
regards Peter
Comment 16 Julien Nabet 2018-02-06 11:08:01 UTC
The cherry-picks are on review:
- for 6.0 https://gerrit.libreoffice.org/#/c/49285/
- for 5.4 https://gerrit.libreoffice.org/#/c/49286/

Let's put this one to FIXED then.

Don't hesitate to test with a build containing the patch.
Comment 17 Commit Notification 2018-02-06 12:06:56 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ca6361e138d21b7151f926609d497afb47e6966&h=libreoffice-6-0

tdf#114731: persona html can contain " instead of "

It will be available in 6.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2018-02-06 14:08:29 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ae86218101c27a2e35a10940661e4c6421870e71&h=libreoffice-5-4

tdf#114731: persona html can contain " instead of "

It will be available in 5.4.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Martin Srebotnjak 2018-02-08 10:33:20 UTC
Master works for me.
Comment 20 Xisco Faulí 2018-02-09 10:43:27 UTC
*** Bug 101842 has been marked as a duplicate of this bug. ***
Comment 21 Julien Nabet 2018-02-10 17:01:28 UTC
*** Bug 115617 has been marked as a duplicate of this bug. ***
Comment 22 Tuomas Lähteenmäki 2018-07-20 20:58:19 UTC
Themes not found in version 6.0.5.2. 
if im enable openGL, The dark theme is turned on by default. what??
Comment 23 Julien Nabet 2018-07-22 13:21:38 UTC
I created a brand new bugtracker tdf#118881. Indeed root cause must be different since Martin Srebotnjak and I could confirm it was ok after the patch.