tdf#114731: persona html can contain &quot; instead of &#34;

So let's replace all &quot; with &#34 in the retrieved html

Change-Id: I4a90ecc51e7ce6d1e080e6c1b17b82fe9a29d65e